syntax = "proto3";

package chora.agent.v1;

option go_package = "github.com/chora-io/mods/agent/types/v1";

// EventCreateAgent is an event emitted when an agent is created.
message EventCreateAgent {

  // address is the address of the agent.
  string address = 1;
}

// EventRemoveAgent is an event emitted when an agent is removed.
message EventRemoveAgent {

  // address is the address of the agent.
  string address = 1;
}

// EventUpdateAgentAdmin is an event emitted when the agent admin is updated.
message EventUpdateAgentAdmin {

  // address is the address of the agent.
  string address = 1;
}

// EventUpdateAgentMetadata is an event emitted when the agent metadata is
// updated.
message EventUpdateAgentMetadata {

  // address is the address of the agent.
  string address = 1;
}
