syntax = "proto3";

package chora.agent.v1;

import "cosmos/orm/v1/orm.proto";

option go_package = "github.com/chora-io/mods/agent/types/v1";

// Agent defines the table and properties of a agent.
message Agent {
  option (cosmos.orm.v1.table) = {
    id : 1,
    primary_key : {fields : "address"}
    index : {id : 1, fields : "admin"}
  };

  // address is the address of the agent.
  bytes address = 1;

  // admin is the address of the agent admin.
  bytes admin = 2;

  // metadata is the metadata of the agent.
  string metadata = 3;
}

message AgentSequence {
  option (cosmos.orm.v1.singleton) = {
    id : 2
  };

  // sequence is the sequence of the agents.
  uint64 sequence = 1;
}
